Fix CORS by allowing frontendUrl